# litecoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .style.yapf  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
build-aux/m4/: ax_boost_system.m4  ax_boost_thread.m4  bitcoin_qt.m4
build_msvc/: bitcoin_config.h  common.init.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/test/: 00_setup_env_native_multiprocess.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: README.md  gitian-build.py  install_db4.sh
contrib/devtools/: circular-dependencies.py  clang-format-diff.py  gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/guix/: manifest.scm
contrib/linearize/: README.md  example-linearize.cfg
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/release/: gitian-verify.py
contrib/seeds/: README.md  makeseeds.py  nodes_main.txt
contrib/testgen/: README.md  gen_key_io_test_vectors.py
contrib/zmq/: zmq_sub.py
depends/: README.md  description.md
depends/hosts/: linux.mk
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-penguincoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoin-wallet.1  litecoind.1  penguincoin-cli.1  penguincoin-qt.1  penguincoin-tx.1  penguincoin-wallet.1  penguincoind.1
doc/mweb/: consensus.md  kernels.md  mining-changes.md  pmmr.md  serialization.md  store.md  weight.md
doc/penguincoin-release-notes/: release-notes-0.10.2.2.md  release-notes-0.10.4.md  release-notes-0.13.2.md  release-notes-0.13.3.md  release-notes-0.14.2.md  release-notes-0.15.0.1.md  release-notes-0.15.1.md  release-notes-0.16.0.md  release-notes-0.16.2.md  release-notes-0.16.3.md  release-notes-0.17.1.md  release-notes-0.18.1.md  release-notes-0.21.1.md  release-notes-0.21.2.1.md  release-notes-0.21.2.2.md  release-notes-0.21.2.md  release-notes-0.21.3.md
doc/release-notes/: signet.md
share/: genbuild.sh  setup.nsi.in
share/examples/: penguincoin.conf
share/qt/: Info.plist.in
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  net.cpp  netaddress.h  pow.cpp  txdb.cpp  validation.cpp
src/bench/: .gitignore  addrman.cpp  checkblock.cpp
src/compat/: assumptions.h
src/consensus/: tx_verify.cpp
src/crc32c/: .appveyor.yml
src/crypto/: scrypt.cpp  scrypt.h
src/libmw/: README.md
src/libmw/src/file/: File.cpp
src/mweb/: mweb_miner.cpp  mweb_models.h  mweb_node.cpp  mweb_policy.cpp  mweb_transact.cpp  mweb_transact.h
src/policy/: feerate.cpp  feerate.h
src/qt/: README.md  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinunits.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  optionsdialog.cpp  paymentserver.cpp  sendcoinsdialog.cpp  utilitydialog.cpp  walletview.cpp
src/qt/forms/: coincontroldialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_uk.ts
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: addressbooktests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  rawtransaction_util.cpp  util.cpp
src/secp256k1-zkp/src/: group_impl.h
src/test/: README.md  amount_tests.cpp  getarg_tests.cpp  main.cpp  pow_tests.cpp
src/test/data/: README.md  key_io_invalid.json  key_io_valid.json
src/test/util/: wallet.cpp
src/util/: message.cpp  system.cpp
src/wallet/: bdb.cpp  coinselection.cpp  coinselection.h  load.cpp  rpcdump.cpp  rpcwallet.cpp  scriptpubkeyman.cpp  txassembler.cpp  txassembler.h  txlist.cpp  wallet.cpp  walletutil.cpp
src/wallet/test/: scriptpubkeyman_tests.cpp  wallet_tests.cpp
test/: README.md  get_previous_releases.py
test/functional/: README.md  combine_logs.py  feature_backwards_compatibility.py  feature_config_args.py  feature_filelock.py  feature_help.py  feature_includeconf.py  feature_proxy.py  feature_settings.py  feature_signet.py  interface_bitcoin_cli.py  interface_rest.py  mempool_persist.py  mweb_basic.py  mweb_mining.py  mweb_node_compatibility.py  mweb_p2p.py  mweb_p2p_mutated_block_submitblock.py  mweb_pegout_all.py  mweb_reorg.py  mweb_wallet_address.py  mweb_wallet_basic.py  mweb_wallet_upgrade.py  mweb_weight.py  p2p_segwit.py  pgc_replacebyfee.py  rpc_bind.py  rpc_createmultisig.py  rpc_deprecated.py  rpc_deriveaddresses.py  rpc_fundrawtransaction.py  rpc_generateblock.py  rpc_invalid_address_message.py  rpc_psbt.py  rpc_rawtransaction.py  rpc_users.py  rpc_whitelist.py  test_runner.py  tool_wallet.py  wallet_basic.py  (+9 more)
test/functional/data/: rpc_psbt.json
test/functional/test_framework/: address.py  coverage.py  messages.py  p2p.py  pgc_util.py  test_framework.py  test_node.py  util.py
test/util/: bitcoin-util-test.py
test/util/data/: bitcoin-util-test.json  txcreatemultisig3.json  txcreateoutpubkey2.json  txcreatescript3.json
(+46 files in other folders)
